2008-06-07  Jonh Wendell <jwendell@gnome.org>

	* po/pt_BR.po: Brazilian Portuguese translation by Rodrigo Braga.
	* po/LINGUAS: Added pt_BR

2008-05-09  Mathias Hasselmann  <mathias@openismus.com>

	Properly express dependencies of libepc-ui-1.0.la.

	* Makefile.am:
	  Remove libepc/libepc-1.0.la from libepc_ui_libepc_ui_1_0_la_LDFLAGS
	  and properly add it to libepc_ui_libepc_ui_1_0_la_LIBADD.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.5 ===

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	Make test suite build with -Werror again.

	* tests/framework.c (_epc_test_match_any(), _epc_test_match_one(),
	  _epc_test_pass_once_per_iface()): Mark unused arguments and change
	  type of ifidx argument from gint to guint.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	Prepare release.

	* NEWS: Updated from ChangeLog
	* configure.ac: Bump version number.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	Upgrade the test suite to handle multiple active network interfaces.

	* tests/framework.c, tests/framework.h (EpcIfTestStatus,
	  epc_test_list_ifaces(), _epc_test_match_any(), _epc_test_match_one(),
	  _epc_test_pass_once_per_iface(), epc_test_pass_once_for_each_iface(),
	  epc_test_pass_once_per_iface()): Provide infrastructure for handling
	  tests, that match once for each active network interface.

	* tests/test-dispatcher-rename.c (service_browser_cb()),
	  tests/test-dispatcher-reset.c (service_browser_cb()),
	  tests/test-publisher-bookmarks.c (service_browser_cb()),
	  tests/test-publisher-change-name.c (service_browser_cb()):
	  Replace epc_test_pass_once() by epc_test_pass_once_per_iface()
	  were needed.

	* tests/test-dispatcher-unique.c (service_found_cb()),
	  tests/test-publisher-unique.c (contents_handler_cb(),
	  service_found_cb()): Replace epc_test_pass_once() by
	  epc_test_pass_once_for_each_iface() were needed.

2008-04-04  Murray Cumming  <murrayc@murrayc.com>
